Finishing templates comments, fixing some issues and doing some improvements     - delete some files     - adding iconoMoto if it does not have any image     - Fixing $timpo in portada table filter

--- a/templates/bundles/FOSUserBundle/Registration/check_email.html.twig
+++ b/templates/bundles/FOSUserBundle/Registration/check_email.html.twig
@@ -1,10 +1,11 @@
+{# Vista mostrando la confirmacion e informando que chequee el email #}
+
 {% extends "@FOSUser/layout.html.twig" %}
 
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block fos_user_content %}
 
-
-    <span>{{ 'registration.check_email'|trans({'%email%': '<strong>'~user.email~'</strong>' }) | raw }}</span>
+    <i class="fa fa-check"></i> <span>{{ 'registration.check_email'|trans({'%email%': '<strong>'~user.email~'</strong>' }) | raw }}</span>
 
 {% endblock fos_user_content %}
