--- a/templates/bundles/FOSUserBundle/Registration/confirmed.html.twig
+++ b/templates/bundles/FOSUserBundle/Registration/confirmed.html.twig
@@ -1,9 +1,11 @@
+{# Vista confirmando que el usuario esta activo #}
+
 {% extends "@FOSUser/layout.html.twig" %}
 
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block fos_user_content %}
     <div class="mensaje-success">
-        <i class="fa fa-check"></i><span>{{ 'registration.confirmed'|trans({'%username%': '<strong>'~user.username~'</strong>'}) |raw }}</span>
+        <i class="fa fa-check"></i> <span>{{ 'registration.confirmed'|trans({'%username%': '<strong>'~user.username~'</strong>'}) |raw }}</span>
     </div>
 {% endblock fos_user_content %}
