--- a/templates/layout/modal.html.twig
+++ b/templates/layout/modal.html.twig
@@ -1,3 +1,5 @@
+{# Plantilla para los Modal's de la aplicacion #}
+
 <div class="modal fade" id="{% block id %}myModal{% endblock %}" tabindex="-1" role="dialog"
      aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -15,7 +17,5 @@
                 </div>
             {% endblock %}
         </div>
-        <!-- /.modal-content -->
     </div>
-    <!-- /.modal-dialog -->
-</div><!-- /.modal -->
+</div>
