--- a/templates/programa/configuracion/registro_vehiculos.html.twig
+++ b/templates/programa/configuracion/registro_vehiculos.html.twig
@@ -1,6 +1,18 @@
+{#
+    Esta vista esta creada solo como ejemplo, pero asi serian las vistas de los programas, solo cambiar
+    {% extends 'layout/programa/configuracion.html.twig' %}
+    
+    por
+
+    {% extends 'layout/programa/ carpeta donde esta contenida .html.twig' %}
+#}
+
 {% extends 'layout/programa/configuracion.html.twig' %}
 
 {% block contenido %}
+
+    {# Poner el HTML deseado a mostrar #}
+
     <h2>Registro vehiculos</h2>
     <h3>Ejemplo de como seria la pagina (configurable)</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias ipsam quod, praesentium ab harum explicabo veritatis id? Itaque reprehenderit provident ea eaque magnam voluptas quas quia voluptatum iure nam. Culpa? Lorem</p>
