--- a/templates/bundles/FOSUserBundle/Registration/email.email.twig
+++ b/templates/bundles/FOSUserBundle/Registration/email.email.twig
@@ -1,3 +1,5 @@
+{# Email de confirmacion para el registro #}
+
 {% trans_default_domain 'FOSUserBundle' %}
 {% block subject %}
     {%- autoescape false -%}
