--- a/templates/bundles/FOSUserBundle/Registration/register.html.twig
+++ b/templates/bundles/FOSUserBundle/Registration/register.html.twig
@@ -1,3 +1,5 @@
+{# Formulario de registro #}
+
 {% extends "@FOSUser/layout.html.twig" %}
 
 {% block fos_user_content %}
@@ -5,8 +7,8 @@
 
     {{ form_start(form, {'method': 'post', 'action': path('registerCheckRecaptcha'), 'attr': {'class': 'fos_user_registration_register form-centro', 'placeholder':'fos_user_registration_register form' | trans }}) }}
 
+    {# Muestro si hay errores #}
     <div class="row lista-errores">
-        <!-- <div>{#{{ form_errors(form.name) }}#}</div> -->
         <div>{{ form_errors(form.email) }}</div>
         <div>{{ form_errors(form.username) }}</div>
         <div>{{ form_errors(form.plainPassword.first) }}</div>
@@ -14,8 +16,6 @@
     </div>
 
     <div>
-        <!-- {#{{ form_widget(form.name, {'attr': {'class': 'form-control', 'autofocus':'', 'placeholder':'name' | trans({}, 'messages') }}) }}#} -->
-        <!-- {#<br/>#} -->
         {{ form_widget(form.email, {'attr': {'class': 'form-control', 'placeholder':'form.email' | trans }}) }}
         <br/>
         {{ form_widget(form.username, {'attr': {'class': 'form-control', 'placeholder':'form.username' | trans }}) }}
@@ -31,6 +31,7 @@
     {{ form_end(form) }}
 {% endblock fos_user_content %}
 
+{# Valido con recaptcha v3 #}
 {% block javascripts %}
     <script src="https://www.google.com/recaptcha/api.js?hl={{app.request.locale}}&render={{recaptcha}}"></script>
     <script>
