--- a/templates/bundles/FOSUserBundle/Resetting/email.email.twig
+++ b/templates/bundles/FOSUserBundle/Resetting/email.email.twig
@@ -1,3 +1,5 @@
+{# Email para el reseteo de contrasennas #}
+
 {% trans_default_domain 'FOSUserBundle' %}
 {% block subject %}
     {%- autoescape false -%}
@@ -5,11 +7,8 @@
     {%- endautoescape -%}
 {% endblock %}
 
-{% block body_text %}
-    {#{% autoescape false %}#}
-    {#{{ 'registration.email.message'|trans({'%name%': user.username, '%confirmationUrl%': confirmationUrl}) }}#}
-    {#{% endautoescape %}#}
-{% endblock %}
+{% block body_text %}{% endblock %}
+
 {% block body_html %}
     {% embed 'layout/email.html.twig' %}
         {% block body %}
