--- a/templates/email/contacto.html.twig
+++ b/templates/email/contacto.html.twig
@@ -1,3 +1,5 @@
+{# Vista de correo de contacto #}
+
 {% extends 'layout/email.html.twig' %}
 
 {% block body %}
@@ -5,6 +7,7 @@
     <h4 style="font-weight: normal;margin: 10px 0;">{{ titulo }}</h4>
     <hr style="border: none; border-top: solid 1px #d1d1d1;"/>
     <p>
+        {# El pipe "nl2br" escapa espacios, saltos de lineas, etc, para que el correo llegue como se escribio realmente #}
         {{ mensaje  | nl2br}}
     </p>
 {% endblock %}
