Remove Binevenido from title tab

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8"/>
     {# Titulo por defecto que sale en la pestanna del navegador en caso que alguna pagina hija no ponga su propio titulo #}
-    <title>{% block title %}Bienvenido - Infotaller{% endblock %}</title>
+    <title>{% block title %}Infotaller{% endblock %}</title>
     {# Logo y estilos de la aplicacion #}
     <link rel="icon" type="image/x-icon" href="{{ asset('img/logoAplicacion.png') }}"/>
 
