--- a/templates/inc/navbar.html.twig
+++ b/templates/inc/navbar.html.twig
@@ -18,7 +18,8 @@
                 {# Pregunto lo que contiene la ruta actual para resaltar el menu especifico app.request.get('_route') #}
                 <li {% if app.request.get('_route') == 'portada' %}class="active"{% endif %}><a
                             href="{{ path('portada') }}">{{ 'menu.inicio' | trans }}</a></li>
-                <li {% if app.request.get('_route') == 'coches' %}class="active"{% endif %}><a href="{{ path('coches') }}">{{ 'menu.coches' | trans | upper }}</a></li>
+                {# TODO: descomentar el menu de abajo cuando esten listos los coches #}
+                {# <li {% if app.request.get('_route') == 'coches' %}class="active"{% endif %}><a href="{{ path('coches') }}">{{ 'menu.coches' | trans | upper }}</a></li> #}
                 <li {% if app.request.get('_route') == 'motos' %}class="active"{% endif %}><a href="{{ path('motos') }}">{{ 'menu.motos' | trans | upper }}</a></li>
                  {# En este caso particular como hay muchas rutas que son de programa, solo pregunto por la primera parte de la ruta #}
                 <li {% if app.request.get('_route')[0:7] == 'program' %}class="active"{% endif %}><a href="{{ path('program') }}">{{ 'menu.software' | trans | upper }}</a></li>
